# sonde

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  final_check.txt  handlers.yaml  master.key  pr-body.tmp  pr_threads.json  resolve.py  review_analysis.txt  s0.sln  sdkconfig.defaults.esp32s3  sht40_log.jsonl  sonde-carrier.rpt  sonde.db-shm  sonde.db-wal  sonde.sln  sonde.txt  sonde_export.out  temperature_log.csv  temperature_log.jsonl  test.etl  test_addr_wrap.rs  test_check_mem.rs  test_edge_cases.rs  test_j1.rpt  test_jump_debug.rs
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
crates/sonde-admin/: Cargo.toml  build.rs
crates/sonde-admin/src/: grpc_client.rs  lib.rs  main.rs  usb.rs
crates/sonde-admin/tests/: cli.rs  integration.rs
crates/sonde-azure-companion/: Cargo.toml
crates/sonde-azure-companion/src/: main.rs
crates/sonde-azure-companion/tests/: bootstrap_unix.rs
crates/sonde-bundle/: Cargo.toml
crates/sonde-bundle/src/: archive.rs  error.rs  lib.rs  main.rs  manifest.rs  validate.rs
crates/sonde-bundle/tests/: cli.rs
crates/sonde-e2e/: Cargo.toml
crates/sonde-e2e/src/: fake_peripheral.rs  harness.rs  lib.rs
crates/sonde-e2e/tests/: aead_e2e_tests.rs  ble_loopback_tests.rs  e2e_tests.rs  modem_bridge_tests.rs
crates/sonde-gateway/: Cargo.toml  build.rs
crates/sonde-gateway/proto/: admin.proto  companion.proto
crates/sonde-gateway/src/: admin.rs  aead.rs  ble_pairing.rs  companion.rs  connector.rs  crypto.rs  display_banner.rs  display_control.rs  engine.rs  gateway_identity.rs  handler.rs  key_provider.rs  lib.rs  modem.rs  phone_trust.rs  program.rs  registry.rs  session.rs  sonde_platform.rs  sqlite_storage.rs  state_bundle.rs  storage.rs  transient_display.rs  transport.rs
crates/sonde-gateway/tests/: admin_display.rs  aead_engine.rs  behavioral_gaps.rs  ble_pairing.rs  ble_pairing_relay.rs  build_metadata.rs  channel_persistence.rs  companion_api.rs  companion_display.rs  connector_api.rs  diag_request.rs  error_observability.rs  handler_config.rs  helper_verifier.rs  key_provider.rs  logging.rs  modem_transport.rs  peer_request.rs  phase2a.rs  phase2b.rs  phase2c.rs  phase2c_admin.rs  phase2d.rs  phase3.rs
crates/sonde-gateway/tests/common/: mod.rs
crates/sonde-kicad/: Cargo.toml
crates/sonde-kicad/src/: error.rs  lib.rs  uuid_gen.rs  validate.rs
crates/sonde-kicad/src/dsn/: mod.rs  structure.rs
crates/sonde-kicad/src/ir/: ir1.rs  ir1e.rs  ir2.rs  ir3.rs  mod.rs
crates/sonde-kicad/src/manufacturing/: bom.rs  cpl.rs  gerber.rs  mod.rs
crates/sonde-kicad/src/pcb/: footprints.rs  mod.rs  placement.rs  silkscreen.rs  zones.rs
crates/sonde-kicad/src/schematic/: layout.rs  mod.rs  symbols.rs  wiring.rs
crates/sonde-kicad/src/ses/: mod.rs  parser.rs
crates/sonde-kicad/src/sexpr/: mod.rs  parser.rs
crates/sonde-kicad/tests/: integration.rs
crates/sonde-kicad/tests/fixtures/minimal-board/: IR-1.yaml  IR-1e.yaml  IR-2.yaml  IR-3.yaml
crates/sonde-modem/: Cargo.toml  build.rs  diagram.json  sdkconfig.defaults  wokwi.toml
crates/sonde-modem/src/: ble.rs  bridge.rs  display.rs  espnow.rs  lib.rs  main.rs  peer_table.rs  status.rs  usb_cdc.rs
crates/sonde-modem/tests/: device_tests.rs
crates/sonde-node/: Cargo.toml  build.rs  diagram.json  partitions.csv  provision.py  sdkconfig.defaults  wokwi.toml
crates/sonde-node/src/: async_queue.rs  ble_pairing.rs  board_layout.rs  bpf_dispatch.rs  bpf_helpers.rs  bpf_runtime.rs  crypto.rs  error.rs  esp_ble_pairing.rs  esp_hal.rs  esp_pairing_serial.rs  esp_sleep.rs  esp_storage.rs  esp_transport.rs  hal.rs  key_store.rs  lib.rs  map_storage.rs  node_aead.rs  pairing.rs  peer_request.rs  program_store.rs  rbpf_adapter.rs  sleep.rs  sonde_bpf_adapter.rs  traits.rs  wake_cycle.rs
crates/sonde-pair/: Cargo.toml
crates/sonde-pair-ui/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
crates/sonde-pair-ui/src-tauri/capabilities/: default.json
crates/sonde-pair-ui/src-tauri/icons/: icon.icns
crates/sonde-pair-ui/src-tauri/src/: lib.rs  main.rs
crates/sonde-pair/java/io/sonde/pair/: BleHelper.java  PermissionActivity.java  SecureStore.java
crates/sonde-pair/src/: android_store.rs  android_transport.rs  btleplug_transport.rs  cbor.rs  crypto.rs  discovery.rs  dpapi.rs  envelope.rs  error.rs  file_store.rs  fragmentation.rs  lib.rs  loopback_transport.rs  phase1.rs  phase2.rs  rng.rs  secret_service_store.rs  store.rs  transport.rs  types.rs  validation.rs
crates/sonde-protocol/: Cargo.toml
crates/sonde-protocol/fuzz/: Cargo.toml
crates/sonde-protocol/fuzz/fuzz_targets/: decode_frame.rs  gateway_message.rs  node_message.rs  program_image.rs
crates/sonde-protocol/src/: aead_codec.rs  ble_envelope.rs  board_layout.rs  chunk.rs  codec.rs  constants.rs  error.rs  header.rs  lib.rs  messages.rs  modem.rs  program_image.rs  traits.rs
crates/sonde-protocol/tests/: unit.rs  validation.rs
deploy/: sonde-gateway.guid  sonde-gateway.service  sonde-gateway.wprp
doc/: gateway-requirements.md
docs/: admin-design.md  admin-requirements.md  admin-validation.md  android-signing.md  azure-companion-design.md  azure-companion-requirements.md  azure-companion-validation.md  azure-provisioning-design.md  azure-provisioning-requirements.md  azure-provisioning-validation.md  ble-pairing-protocol.md  ble-pairing-tool-design.md  ble-pairing-tool-requirements.md  ble-pairing-tool-validation.md  bpf-environment.md  bundle-format.md  bundle-tool-design.md  bundle-tool-requirements.md  bundle-tool-validation.md  carrier-board-design.md  carrier-board-requirements.md  contributing.md  deployment-sop.md  draft-jowett-sec-threat-model-constrained-onboarding-00.txt  e2e-validation.md  evolve-495-phase1.md  gateway-api.md  gateway-bom.md  gateway-companion-api.md  gateway-design.md  gateway-requirements.md  gateway-validation.md  getting-started.md  hw-design.md  hw-requirements.md  hw-schematic-design.md  hw-spice-pipeline-spec.md  hw-validation.md  ietf-faq.md  (+25 more)
hooks/: commit-msg  (+1 more)
(+216 files in other folders)
