[workspace]
resolver = "2"
members = [
    "crates/sonde-protocol",
    "crates/sonde-gateway",
    "crates/sonde-modem",
    "crates/sonde-node",
    "crates/sonde-admin",
    "crates/sonde-bpf",
    "crates/sonde-e2e",
    "crates/sonde-pair",
]
default-members = [
    "crates/sonde-protocol",
    "crates/sonde-gateway",
    "crates/sonde-admin",
]

# Firmware-specific release profile. Build with: cargo build --profile firmware
# Only affects firmware builds; regular `cargo build --release` uses defaults.
[profile.firmware]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
