[workspace]
resolver = "2"
members = [
    "crates/sonde-protocol",
    "crates/sonde-gateway",
    "crates/sonde-modem",
    "crates/sonde-node",
    "crates/sonde-admin",
    "crates/sonde-bpf",
    "crates/sonde-bundle",
    "crates/sonde-e2e",
    "crates/sonde-pair",
    "crates/sonde-pair-ui/src-tauri",
    "crates/sonde-tmp102-handler",
    "crates/sonde-sht40-handler",
    "crates/sonde-kicad",
]
default-members = [
    "crates/sonde-protocol",
    "crates/sonde-gateway",
    "crates/sonde-admin",
    "crates/sonde-bundle",
    "crates/sonde-tmp102-handler",
    "crates/sonde-sht40-handler",
]

[workspace.package]
version = "0.5.0"

# Firmware-specific release profile. Build with: cargo build --profile firmware
# Only affects firmware builds; regular `cargo build --release` uses defaults.
[profile.firmware]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
