[package]
name = "sonde-admin"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "sonde-admin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
prost = "0.14"
getrandom = "0.4"
serialport = "4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonde-protocol = { path = "../sonde-protocol" }
hyper-util = "0.1"
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"
tower = "0.5"

[build-dependencies]
tonic-prost-build = "0.14"
