[package]
name = "sonde-admin"
version.workspace = true
edition = "2021"
license = "MIT"

[[bin]]
name = "sonde-admin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper-util = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-prost = "0.14"
tower = "0.5"
rpassword = "7.4.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
sonde-gateway = { path = "../sonde-gateway" }
