[package]
name = "sonde-azure-companion"
edition = "2021"
version.workspace = true
license = "MIT"

[dependencies]
azservicebus = { version = "0.25.1", default-features = false, features = ["rustls"] }
azure_core = { version = "0.25", default-features = false }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
hyper-util = "0.1"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
oauth-device-flows = { version = "0.1", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots-no-provider"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sonde-gateway = { path = "../sonde-gateway", default-features = false }
time = "0.3"
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tower = "0.5"
thiserror = "2"
url = "2"

[dev-dependencies]
futures = "0.3"
tempfile = "3"
temp-env = "0.3"
tokio-stream = "0.1"
wiremock = "0.6"
