[package]
name = "sonde-bundle"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Sonde App Bundle (.sondeapp) creation, validation, and inspection"

[[bin]]
name = "sonde-bundle"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
semver = { version = "1", features = ["serde"] }
tar = "0.4"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
