[package]
name = "sonde-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sonde-protocol = { path = "../sonde-protocol" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
hmac = "0.12"
sha2 = "0.10"
async-trait = "0.1"
rand = "0.10"
ciborium = "0.2"
tracing = "0.1"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prevail = { git = "https://github.com/elazarg/prevail-rust.git", rev = "bc5be2ea", default-features = false }
tempfile = "3"
rusqlite = { version = "0.34", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-serial = "5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"

[[bin]]
name = "sonde-gateway"
path = "src/bin/gateway.rs"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }
