[package]
name = "sonde-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sonde-protocol = { path = "../sonde-protocol" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
async-trait = "0.1"
getrandom = "0.4"
ciborium = "0.2"
aes-gcm = "0.10"
pbkdf2 = "0.12"
tracing = "0.1"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prevail = { git = "https://github.com/elazarg/prevail-rust.git", rev = "bc5be2ea", default-features = false }
tempfile = "3"
zeroize = "1.8.2"
ed25519-dalek = { version = "2", features = ["zeroize"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rusqlite = { version = "0.39", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serial2-tokio = "0.1"
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10.0"

[[bin]]
name = "sonde-gateway"
path = "src/bin/gateway.rs"

[build-dependencies]
tonic-prost-build = "0.14"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_Memory",
] }
windows-service = "0.8.0"
tracing-etw = "0.2.3"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }
hyper-util = "0.1"
tower = "0.5"

[features]
python-tests = []
