[package]
name = "sonde-kicad"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Convert sonde-hw-design IR files to KiCad 8 schematics, PCB layouts, and Specctra DSN files"

[[bin]]
name = "sonde-kicad"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
