[package]
name = "sonde-kicad"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Convert sonde-hw-design IR files to KiCad 8 schematics, PCB layouts, and Specctra DSN files"

[[bin]]
name = "sonde-kicad"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
