[package]
name = "sonde-node"
version = "0.1.0"
edition = "2021"
description = "Sonde node firmware — wake cycle engine, BPF runtime, and platform abstractions"

[features]
default = []
# Enable ESP-IDF platform support (required for firmware builds).
# Without this feature, only platform-independent modules compile,
# enabling host-side testing of the wake cycle engine and protocol logic.
esp = ["dep:esp-idf-hal", "dep:esp-idf-svc", "dep:esp-idf-sys", "dep:embuild"]

[dependencies]
sonde-protocol = { path = "../sonde-protocol" }
ciborium = { version = "0.2", default-features = false }
hmac = "0.12"
log = "0.4"
sha2 = "0.10"

# ESP-IDF dependencies — only pulled in with the "esp" feature.
esp-idf-hal = { version = "0.46", optional = true }
esp-idf-svc = { version = "0.52", features = ["binstart"], optional = true }
esp-idf-sys = { version = "0.37", features = ["binstart"], optional = true }
sonde-bpf = { path = "../sonde-bpf", default-features = false }

[build-dependencies]
embuild = { version = "0.33", optional = true }

[package.metadata.esp-idf-sys]
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]
esp_idf_component_manager = "n"
