[package]
name = "sonde-node"
version = "0.2.0"
edition = "2021"
description = "Sonde node firmware — wake cycle engine, BPF runtime, and platform abstractions"

[features]
default = ["quiet"]
# Enable ESP-IDF platform support (required for firmware builds).
# Without this feature, only platform-independent modules compile,
# enabling host-side testing of the wake cycle engine and protocol logic.
esp = ["dep:esp-idf-hal", "dep:esp-idf-svc", "dep:esp-idf-sys", "dep:esp32-nimble", "dep:embuild"]
# Default log level policy: strip info!/debug!/trace! at compile time in
# release builds for minimal overhead and lowest power. Mutually exclusive
# with `verbose`.
quiet = ["log/release_max_level_warn"]
# Verbose logging: keep all levels up to debug! compiled in for release
# firmware so operators can diagnose issues without reflashing. Runtime
# default is INFO. Build with `--features esp,verbose --no-default-features`
# (ND-1012).
verbose = ["log/release_max_level_debug"]

[dependencies]
sonde-protocol = { path = "../sonde-protocol" }
ciborium = { version = "0.2", default-features = false }
hmac = "0.12"
log = { version = "0.4", features = ["max_level_trace"] }
sha2 = "0.10"

# ESP-IDF dependencies — only pulled in with the "esp" feature.
esp-idf-hal = { version = "0.46", optional = true }
esp-idf-svc = { version = "0.52", features = ["binstart"], optional = true }
esp-idf-sys = { version = "0.37", features = ["binstart"], optional = true }
esp32-nimble = { git = "https://github.com/taks/esp32-nimble", branch = "main", optional = true }
sonde-bpf = { path = "../sonde-bpf", default-features = false }

[build-dependencies]
embuild = { version = "0.33", optional = true }

[package.metadata.esp-idf-sys]
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]
esp_idf_component_manager = "n"
