[package]
name = "sonde-pair"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
btleplug = ["dep:btleplug", "dep:uuid", "dep:tokio", "dep:futures"]

[dependencies]
ed25519-dalek = { version = "2", features = ["zeroize"] }
curve25519-dalek = { version = "4", features = ["zeroize"] }
x25519-dalek = { version = "2", features = ["zeroize", "static_secrets"] }
hkdf = "0.12"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
getrandom = { version = "0.4", features = ["std"] }
zeroize = { version = "1", features = ["derive"] }
ciborium = "0.2"
tracing = "0.1"
thiserror = "2"

# Optional — desktop BLE transport (Windows / Linux / macOS)
btleplug = { version = "0.11", optional = true }
uuid = { version = "1", optional = true }
tokio = { version = "1", features = ["time", "rt"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }
x25519-dalek = { version = "2", features = ["zeroize", "static_secrets"] }
