[package]
name = "sonde-pair"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
btleplug = ["dep:btleplug", "dep:uuid", "dep:tokio", "dep:futures"]
file-store = ["dep:serde", "dep:serde_json"]
dpapi = ["dep:windows-sys", "file-store"]
secret-service-store = ["dep:secret-service", "dep:tokio", "tokio/rt-multi-thread", "file-store"]
android = ["dep:jni", "dep:tokio"]

[dependencies]
ed25519-dalek = { version = "2", features = ["zeroize"] }
curve25519-dalek = { version = "4", features = ["zeroize"] }
x25519-dalek = { version = "2", features = ["zeroize", "static_secrets"] }
hkdf = "0.12"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
getrandom = { version = "0.4", features = ["std"] }
zeroize = { version = "1", features = ["derive"] }
ciborium = "0.2"
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# Optional — desktop BLE transport (Windows / Linux / macOS)
btleplug = { version = "0.11", optional = true }
uuid = { version = "1", optional = true }
tokio = { version = "1", features = ["time", "rt"], optional = true }
futures = { version = "0.3", optional = true }

# Optional — Android BLE transport and persistent store (aarch64-linux-android)
jni = { version = "0.21", optional = true }

# Optional — Windows DPAPI PSK protection (enable via `dpapi` feature)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_Memory",
], optional = true }

# Optional — Linux Secret Service PSK protection (enable via `secret-service-store` feature)
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }
x25519-dalek = { version = "2", features = ["zeroize", "static_secrets"] }
tempfile = "3"
