[package]
name = "sonde-protocol"
version = "0.3.0"
edition = "2021"
description = "Shared protocol crate for the Sonde platform"

[features]
default = ["aes-gcm-codec"]
std = []
aes-gcm-codec = []

[dependencies]
ciborium = { version = "0.2", default-features = false }

[dev-dependencies]
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
