[package]
name = "sonde-pair-ui"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Tauri v2 BLE pairing tool for sonde sensor nodes"

[lib]
name = "sonde_pair_ui"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Desktop: use btleplug BLE transport and JSON file store
[target.'cfg(not(target_os = "android"))'.dependencies.sonde-pair]
path = "../../sonde-pair"
features = ["btleplug", "file-store"]

# Android: use JNI-based BLE transport and Android secure store
[target.'cfg(target_os = "android")'.dependencies.sonde-pair]
path = "../../sonde-pair"
features = ["android"]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
